--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -15,47 +15,66 @@ body {
     }
 }
 
-
 .app{    
     position: absolute;
     top: 0;
     width: 100%;
     overflow: hidden;
     .navbar{
-        height: 167px;
+        box-sizing: border-box;
         width: 100%;
+        height: 11.6rem;
         position: fixed;
         z-index: 1000;
         opacity: .95;
     }
     .content{
-        max-height: calc(100vh - 167px);
-        margin-top: 167px;
+        margin-top: 11.6rem;
+        height: calc(100vh - 11.6rem);
         overflow: scroll;
+
+        h1:target {
+            &::before {
+                content: '';
+                display: block;
+                height: 4rem;
+            }
+        }
     }
 }
 
 @media (width >  635px) {
     .app{
         .navbar{
-            height: 156px;
+            height: 10rem;
         }
         .content{
-            max-height: calc(100vh - 156px);
-            margin-top: 156px;
+            height: calc(100vh - 10rem);
+            margin-top: 10rem;
         }
     }
 }
 
+@media (width > 635px) {
+    .app{
+        .navbar{
+            height: 10rem;
+        }
+        .content{
+            height: calc(100vh - 10rem);
+            margin-top: 10rem;
+        }
+    }}
+    
+    
 @media (width >  $layout-breakpoint-medium) {
     .app{
         .navbar{
-            height: 164px;
+            height: 10rem;
         }
         .content{
-            max-height: calc(100vh - 164px);
-            margin-top: 164px;
+            height: calc(100vh - 10rem);
+            margin-top: 10rem;
         }
-        
     }
 }
