--- a/src/pages/ProjectsPage/ProjectsPage.module.scss
+++ b/src/pages/ProjectsPage/ProjectsPage.module.scss
@@ -2,7 +2,7 @@
 
 .pageContainer {
     align-self: flex-start;
-    width: 100vw;
+    width: 100%;
     min-height: calc(100vh - 168px + 2rem);
     padding: 2rem 0;
     display: flex;
@@ -11,8 +11,7 @@
     flex-direction: column;
     background-color: $palette3;
     z-index: 100;
-    & h1 {
-        
+    & h1 {        
         color: $palette2;
     }
 
